--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,8 @@ spring.application.name=tinder-ai-backend
 spring.ai.openai.api-key=${SPRING_AI_OPEN_AI_API_KEY}
 spring.ai.openai.chat.options.model=gpt-3.5-turbo
 spring.ai.openai.chat.options.temperature=0.7
+startup-actions.initializeProfiles=true
+tinderai.lookingForGender=woman
+
+#User's profile
+tinderai.character.user={id:'user', firstName:'Vijay', lastName:'Parthasarathy', age:33, ethnicity:'Indian', gender:'MALE', bio:'Software consultant, learner. I like running, music and motorcycles.', imageUrl:'', myersBriggsPersonalityType:'INTP'}
